--- a/client/pokeStore/src/components/cart/cart.css
+++ b/client/pokeStore/src/components/cart/cart.css
@@ -3,7 +3,6 @@
 .cart li {
   display: flex;
   flex-direction: column;
-  cursor: pointer;
   gap: 1em;
   list-style: none;
   border-radius: 4px;
@@ -19,7 +18,23 @@
   object-fit: cover;
   background: #7390ee57;
 }
-
+.Cart p{
+  margin: 0;
+  color: rgba(236, 193, 136, 0.644);
+}
 .parrafo {
+  margin-top: 0;
   font-size: x-small;
+}
+
+.buttons{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.buttons button{
+  text-align: center;
+  background-color: rgba(163, 130, 130, 0.26);
+  color:rgba(236, 193, 136, 0.644);
 }
