--- a/client/pokeStore/src/components/cart/cart.css
+++ b/client/pokeStore/src/components/cart/cart.css
@@ -6,7 +6,7 @@
   gap: 1em;
   list-style: none;
   border-radius: 4px;
-  background-color: #111;
+  background-color: #000000f8;
   color: #fff;
   padding: 1em;
   box-shadow: 0 0 10px 10px rgba(0, 0, 0, .1);
