--- a/client/pokeStore/src/components/favorites/favorites.css
+++ b/client/pokeStore/src/components/favorites/favorites.css
@@ -1,7 +1,42 @@
-.nav-favoritos{
-  margin-top: 0;
+.favorites {
+  background: #1b1b1bcb;
+  padding: 32px;
+  position: absolute;
+  right: 0px;
+  top: 231px;
+  width: 300px;
+  height: auto;
+  z-index: 3;
+  border-radius: 4px;
+  display: none;
+}
+
+.favorites h3 {
+  margin-top: -32px;
+  border-radius: 4px;
+  color: rgb(14, 236, 236);
+  font-size: xx-large;
+  font-weight: bold;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.favorites button{
+  background-color: rgba(133, 32, 32, 0.904);
+  margin-top: 16px;
+  color: rgb(8, 8, 8);
+  border:1px solid rgb(17, 17, 17)
+  
+}
+
+.favorite-list {
   width: 100%;
-  height: 200px;
-  background-color: aqua;
-  margin-bottom: 12px;
+  height: 100%;
+  max-height: 100vh;
+  /* activa el scroll vertical */
+  overflow: auto;
+  /* corrige el scroll y lo centra */
+}
+
+.favorite-list ul{
+  margin: 0;
+  padding: 0;
 }
