--- a/client/pokeStore/src/components/carts/carts.css
+++ b/client/pokeStore/src/components/carts/carts.css
@@ -1,9 +1,9 @@
-
 .carts {
   width: 100%;
   height: 100vh;
-  
+
 }
+
 .carts ul {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -12,3 +12,15 @@
   padding: 10px;
 }
 
+.button-favorite-off {
+  background-color: rgba(133, 32, 32, 0.904);
+  border-radius: 8px;
+  border: antiquewhite;
+}
+
+.button-favorite-on {
+  background-color: rgb(83, 91, 242);
+  color: bisque;
+  border-radius: 8px;
+  border: antiquewhite;
+}
