--- a/client/pokeStore/src/components/detail/detail.css
+++ b/client/pokeStore/src/components/detail/detail.css
@@ -1,20 +1,23 @@
-.mainDetail{
+.mainDetail {
   background-color: rgba(0, 0, 0, 0.418);
   border: 4mm ridge rgba(70, 71, 54, 0.6);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 600px;
-  height: 450px;
+  width: 500px;
+  height: 400px;
+  margin-top: 4px;
 }
-.mainDetail h3{
-  font-size:larger;
+
+.mainDetail h3 {
+  font-size: larger;
   font: bold;
   color: black;
   margin-bottom: 0;
 }
-.button-check{
+
+.button-check {
   width: 10px;
   height: 10px;
   display: flex;
@@ -24,36 +27,48 @@
   border: 1px solid rgba(118, 106, 189, 0.623);
   margin: 0;
 }
-.button-uncheck
-{
-    width: 10px;
-    height: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(2 2 2 / 0%);
-    border: 1px solid rgba(22, 19, 235, 0.623);
-    margin: 0;
-  }
-.buttonDetail button > img{
-    width: 16px;
-    height: 16px;
-    object-fit: cover;
-    margin-bottom: 0;
+
+.button-uncheck {
+  width: 10px;
+  height: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(2 2 2 / 0%);
+  border: 1px solid rgba(22, 19, 235, 0.623);
+  margin: 0;
 }
-.mainDetail img{
-  height: 300px;
-  width: 300px;
+
+.buttonDetail button>img {
+  width: 16px;
+  height: 16px;
+  object-fit: cover;
+  margin-bottom: 0;
+}
+
+.mainDetail img {
+  height: 250px;
+  width: 250px;
   margin-bottom: 16px;
   margin-top: 4;
 }
-.details p, a{
+
+.details p {
   margin: 0;
   font: bold;
   color: rgb(46, 14, 14);
-  margin-bottom: 12px;
+  font-size: 12px;
 }
-.details{
+
+.details a {
+  margin: 0;
+  font: bold;
+  color: #95488efc;
+  font-size: 12px;
+}
+
+
+.details {
   display: flex;
   justify-content: space-between;
   gap: 24px;
